@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-11T01:25:28Z",
+  "timestamp" : "2022-07-11T08:20:04Z",
   "count_outdated" : 381,
   "uniques_outdated" : 220,
   "count" : 413,
-  "uniques" : 238,
+  "uniques" : 239,
   "clones" : [
     {
       "timestamp": "2022-06-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -102,6 +102,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-07-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
