@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2022-07-10T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
